--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -24,7 +24,7 @@
     background-color: #f1f0ef;
     border: none;
     width:100%;
-    height: 280px;
+    height: 250px;
     position: absolute;
     top: 2290px;
     left: 0px;
@@ -56,8 +56,8 @@
     position: absolute;
     top: 2220px;
     font-size: 0.8em;
-    left: 45%;
-       
+    left: 50%;
+    transform: translate(-50%, -50%);  
 }
 
 #product{
@@ -1334,15 +1334,11 @@ z-index: 1000;
     left: 0%;
 }
 
-li{
-    list-style-type: none;
-}
-
 .inst{
     height: 34px;
     width: 34px;
     position: absolute;
-    top: 57px;
+    top: 2350px;
     left: 70px;
     border-radius: 10px;
 }
@@ -1351,7 +1347,7 @@ li{
     height: 37px;
     width: 37px;
     position: absolute;
-    top: 55px;
+    top: 2350px;
     left: 175px;
     border-radius: 10px;
 }
@@ -1360,7 +1356,31 @@ li{
     height: 41px;
     width: 41px;
     position: absolute;
-    top: 55px;
+    top: 2350px;
     left: 280px;
     border-radius: 10px;
+}
+
+.term{
+    position: absolute;
+    top: 2500px;
+    left: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 9px;
+}
+
+.priv{
+    position: absolute;
+    top: 2500px;
+    left: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 9px;
+}
+
+.ano{
+    position: absolute;
+    top: 2500px;
+    left: 93px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 9px;
 }
